# lvivchurch_sermons

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
project/: settings.py  urls.py
sermons_index/: admin.py  models.py  urls.py  views.py
sermons_index/migrations/: 0001_initial.py  0002_sermon_agenda_alter_sermon_quote.py  0002_sermon_folder_id.py  0003_sermon_book.py  0004_sermon_uploadfile.py
sermons_index/services/: storage.py
sermons_index/static/css/: base.css
sermons_index/static/js/: sermons.js
src/project/: settings.py  urls.py
src/sermons_index/: admin.py  apps.py  models.py  urls.py  views.py
src/sermons_index/migrations/: 0003_alter_sermon_title.py
src/sermons_index/services/: storage.py
src/sermons_index/static/css/: base.css
src/sermons_index/static/js/: sermons.js
src/templates/project/: base.html
src/templates/sermons_index/: sermons_index.html
src/templates/sermons_index/icons/: check.html  link.html
src/templates/two_factor/: _base.html  _base_focus.html  _wizard_actions.html
templates/project/: base.html
templates/sermons_index/: sermons_index.html
