[project]
name = "lvivchurch-sermons"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Andrus",email = "oleh.andrus@kompaspublishing.nl"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (==4.2.17)",
    "beautifulsoup4 (==4.12.3)",
    "box-sdk-gen (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ruff = "^0.15.5"
djlint = "^1.36.4"


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sermons_index"]

[tool.djlint]
profile = "django"
indent = 4
max_line_length = 120
